--- a/express-server/package.json
+++ b/express-server/package.json
@@ -9,6 +9,9 @@
     "body-parser": "~1.15.2",
     "express": "~4.14.0",
     "mongoose": "^4.7.0",
-    "axios": "0.16.1"
+    "axios": "0.16.1",
+    "multer": "1.3.0",
+    "multer-gridfs-storage": "1.2.0",
+    "gridfs-stream": "1.1.1"
   }
 }
