--- a/client-app/package.json
+++ b/client-app/package.json
@@ -23,7 +23,8 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "ng2-file-upload": "1.2.1"
   },
   "devDependencies": {
     "@angular/cli": "1.0.6",
