--- a/express-server/package.json
+++ b/express-server/package.json
@@ -12,6 +12,8 @@
     "axios": "0.16.1",
     "multer": "1.3.0",
     "multer-gridfs-storage": "1.2.0",
-    "gridfs-stream": "1.1.1"
+    "gridfs-stream": "1.1.1",
+    "tmp": "0.0.31",
+    "python-shell": "0.4.0"
   }
 }
