--- a/express-server/package.json
+++ b/express-server/package.json
@@ -14,6 +14,7 @@
     "multer-gridfs-storage": "1.2.0",
     "gridfs-stream": "1.1.1",
     "tmp": "0.0.31",
-    "python-shell": "0.4.0"
+    "python-shell": "0.4.0",
+    "date-and-time": "0.4.0"
   }
 }
