--- a/fourth-express-ts/package.json
+++ b/fourth-express-ts/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.7.0",
     "morgan": "1.7.0",
     "winston": "2.3.1",
+    "express-winston": "^2.0.0",
     "multer": "1.3.0",
     "tmp": "0.0.31",
     "python-shell": "0.4.0",
