--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,24 +5,34 @@ version: '3' # specify docker-compose version
 # Define the services/containers to be run
 services:
   angular: # name of the first service
-    build: /home/sapporo/Coding/DeepLearning/GardenApp/client-app-dev # specify the directory of the Dockerfile
+    build: ./client-app-dev # specify the directory of the Dockerfile
     ports:
-      - "4200:4200" # specify port forewarding
+      - "4200:4200" # specify port forwarding
     volumes:
-      - /home/sapporo/Coding/DeepLearning/GardenApp/client-app:/usr/src/garden-app-dev
+      - ./client-app:/usr/src/garden-app-dev
 
-  express-ts: #name of the second service
+  express-ts-alpine: #name of the second service
     build: express-ts-server # specify the directory of the Dockerfile
     ports:
-      - "3000:3000" #specify ports forewarding
+      - "3000:3000" #specify ports forwarding
     links:
       - database # link this service to the database service
+      - tensorflow-serving
     volumes:
-      - /home/sapporo/Coding/DeepLearning/GardenApp/express-ts-server:/usr/src/express-ts-app
+      - ./express-ts-server:/usr/src/express-ts-app
+      - /usr/src/express-ts-app/node_modules # to prevent the local directory covering over the installed modules
 
   database: # name of the third service
     image: mongo # specify image to build container from
     ports:
-      - "27017:27017" # specify port forewarding
+      - "27017:27017" # specify port forwarding
     volumes: 
-      - /home/sapporo/Coding/DeepLearning/GardenApp/database:/data/db
+      - ./database:/data/db
+
+  tensorflow-serving:
+    image: 'bitnami/tensorflow-serving:latest'
+    ports:
+      - '9000:9000'
+    volumes:
+      - /home/sapporo/Coding/DeepLearning/GardenApp/tensorflow-serving/models:/bitnami/model-data
+      - /home/sapporo/Coding/DeepLearning/GardenApp/tensorflow-serving/config:/bitnami/tensorflow-serving
