--- a/express-ts-server/package.json
+++ b/express-ts-server/package.json
@@ -32,7 +32,11 @@
     "python-shell": "0.4.0",
     "date-and-time": "0.4.0",
     "method-override": "^2.3.5",
-    "cors": "2.8.3"
+    "cors": "2.8.3",
+    "tensorflow-serving-node-client": "0.0.1",
+    "grpc": "1.4.1",
+    "protobufjs": "6.8.0",
+    "google-protobuf": "3.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "0.0.33",
@@ -57,7 +61,10 @@
     "run-sequence": "1.2.2",
     "tslint": "4.3.1",
     "typedoc": "0.5.5",
-    "typescript": "2.1.5"
+    "typescript": "2.1.5",
+    "grpc-tools": "1.4.1",
+    "grpc-tsd": "1.0.8",
+    "grpc_tools_node_protoc_ts": "1.0.13"
   },
   "engines": {
     "node": ">=4.0.0"
